# Sentinel-MCP

./: .coverage  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  mkdocs.yml  pyproject.toml
.github/: ISSUE_TEMPLATE.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  docs.yml  nightly-e2e.yml
.specstory/: .gitignore
apps/admin-console/: README.md  package-lock.json  package.json  tsconfig.json
apps/control-plane/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/control-plane/alembic/: env.py
apps/control-plane/alembic/versions/: 0001_initial.py
apps/control-plane/src/sentinel_control_plane/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
apps/control-plane/src/sentinel_control_plane/routes/: __init__.py  kill_switch.py  policy.py  provenance.py  registry.py
config/: sample-policies.rego  sample-tools.yaml
docs/: demo.md  index.md
docs/appendix/: faq.md  glossary.md
docs/governance/: executive.md  policy-playbook.md
docs/operations/: runbooks.md  security.md
docs/technical/: architecture.md  setup.md  testing.md
infra/devcontainer/: devcontainer.json
infra/terraform/: README.md
opa/: config.yaml  data.json
scripts/: api_smoke.sh  chaos_kill.sh  dev_down.sh  dev_up.sh  hostname_check.sh  seed.py
site/: 404.html  index.html
site/appendix/faq/: index.html
site/appendix/glossary/: index.html
site/governance/executive/: index.html
site/governance/policy-playbook/: index.html
site/operations/runbooks/: index.html
site/search/: search_index.json
tests/: conftest.py
tests/api/: test_control_plane.py
tests/unit/: test_agentkit_adapter.py  test_kill_switch_route.py  test_policy_client.py  test_policy_route.py  test_provenance.py  test_registry_ordering.py
(+14 files in other folders)
