[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "Q"]
ignore = ["E501"]
exclude = ["apps/admin-console", "node_modules", ".venv"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    apps/admin-console
  | node_modules
  | .venv
)/
'''

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
namespace_packages = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
